Fixed some minor issues.

--- a/index.html
+++ b/index.html
@@ -1418,7 +1418,7 @@
           <div id="u304_div" class=""></div>
           <!-- Unnamed () -->
           <div id="u305" class="text">
-            <p><span>engineering.gradinfo@bsu.edu</span></p>
+            <p><span>ethnography.gradinfo@bsu.edu</span></p>
           </div>
         </div>
 
