--- a/index.html
+++ b/index.html
@@ -1472,7 +1472,7 @@
           <div id="u316_div" class=""></div>
           <!-- Unnamed () -->
           <div id="u317" class="text">
-            <p><span>6 Methrotech Center, Booklyn NY 11201</span></p>
+            <p><span>6 Methrotech Center, Booklyn NY 11201, 6th floor.</span></p>
           </div>
         </div>
 
